--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div id="cards"></div>
       </div>
       <div id="bottomSection">
-        <h1>Your Cart (<span id="number"></span>)</h1>
+        <h1>Your Cart (<span id="number">0</span>)</h1>
         <div id="product-list"></div>
       </div>
     </section>
